--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Yazdani Chowdhury",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1440.0",
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
